[gd_scene load_steps=2 format=3 uid="uid://b1bnsvkbkoh2f"]

[ext_resource type="Script" uid="uid://kmxqtaqdknfv" path="res://Scenes/level_up_ui.gd" id="1_uuhha"]

[node name="LevelUpUi" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_uuhha")

[node name="DamageButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="SpeedButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="AttackSpeedButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="DamageButton" to="." method="_on_damage_button_pressed"]
[connection signal="pressed" from="SpeedButton" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="AttackSpeedButton" to="." method="_on_attack_speed_button_pressed"]
